--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .one{
+            width: 80%;
+            height: 20px;
+            padding: 10px;
+            font-size: 20px;
+            margin-bottom: 10px;
+        }
+        .btn{
+            font-size: 20px;
+            padding: 10px;
+        }
+        
+
+    </style>
 </head>
 <body>
-  
+
+   <input class="one" type="number" name="number" id="number" placeholder="Enter your number"><br>
+   <button class="btn">Button</button>
     <script src="index.js"></script>
 </body>
 </html>
